tests/ui/abi3_nativetype_inheritance.stderr
error[E0277]: the trait bound `PyDict: PyClassBaseType` is not satisfied
 --> tests/ui/abi3_nativetype_inheritance.rs:5:19
  |
5 | #[pyclass(extends=PyDict)]
  |                   ^^^^^^ the trait `PyClass` is not implemented for `PyDict`, which is required by `PyDict: PyClassBaseType`
  |
  = help: the trait `PyClassBaseType` is implemented for `PyAny`
  = note: required for `PyDict` to implement `PyClassBaseType`
note: required by a bound in `PyClassImpl::BaseType`
 --> src/impl_/pyclass.rs
  |
  |     type BaseType: PyTypeInfo + PyClassBaseType;
  |                                 ^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::BaseType`

error[E0277]: the trait bound `PyDict: PyClass` is not satisfied
 --> tests/ui/abi3_nativetype_inheritance.rs:5:1
  |
5 | #[pyclass(extends=PyDict)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyDict`, which is required by `PyDict: PyClassBaseType`
  |
  = help: the following other types implement trait `PyClass`:
            TestClass
            pyo3::coroutine::Coroutine
  = note: required for `PyDict` to implement `PyClassBaseType`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
